# ingestion-dicom

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-compose0.yml  pyproject.toml  requirements.txt
dags/: ingestion_dag.py  multimodal_dag.py
example_output/: report_1011.json  report_1111.json
src/: ingestion_pipeline.py  multimodal_dag.py
src/ingestion/: dicom_processor.py
src0/ingestion/: dicom_processor.py
