
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion_de,o"
version = "0.1.0"
description = "Multimodal DICOM and Text de-identification pipeline"
dependencies = [
    "pydicom>=2.3.0",
    "numpy>=1.21.0",
    "spacy>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]